@startuml

title __INDICATOR's Class Diagram__\n

  namespace swarm {
    namespace robot {
      namespace indicator {
        abstract class swarm.robot.indicator.AbstractIndicator {
            # robotId : int
            + AbstractIndicator()
            {abstract} + handleSubscription()
            - subscribe()
        }
      }
    }
  }
  

  namespace swarm {
    namespace robot {
      namespace indicator {
        class swarm.robot.indicator.NeoPixel {
            - B : int
            - G : int
            - R : int
            - topicsSub : HashMap<mqttTopic, String>
            + NeoPixel()
            + changeColor()
            + handleSubscription()
            # subscribe()
        }
      }
    }
  }
  

  namespace swarm {
    namespace robot {
      namespace indicator {
        enum mqttTopic {
          NEOPIXEL_IN
        }
      }
    }
  }
  

  swarm.robot.indicator.AbstractIndicator o-- swarm.robot.Robot : robot
  swarm.robot.indicator.AbstractIndicator o-- swarm.mqtt.RobotMqttClient : robotMqttClient
  swarm.robot.indicator.NeoPixel -up-|> swarm.robot.indicator.AbstractIndicator
  swarm.robot.indicator.NeoPixel +-down- swarm.robot.indicator.NeoPixel.mqttTopic


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
